syntax = "proto3";

package greet;

// The greeter service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply) {}
  // Sends a less formal greeting.
  rpc SayHi (HelloRequest) returns (HelloReply) {}

  // return a number.
  rpc Number (NumRequest) returns (NumberResponse) {}

  rpc Authenticate (AuthenticateRequest) returns (AuthenticateResponse) {}
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings
message HelloReply {
  string message = 1;
}

message HiRequest {
  string car = 1;
}

message HiReply {
  string message = 1;
}

message NumRequest {
  float message = 1;
}

message NumberResponse {
  float message = 1;
}

message AuthenticateRequest {
  string username = 1;
  string password = 2;
}

message AuthenticateResponse {
  string token = 1;
  string refresh_token = 2;
}
